--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PracaInzV1</string>
+    <string name="btnMenuUnhide">Odkryj</string>
+    <string name="btnMenuStat">Statystyki</string>
+    <string name="btnMenuHide">Ukryj</string>
 </resources>
